src/test/deca/context/invalid/declVar-multipleWrongType.context
declVar-multipleWrongType.deca:2: